--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "@types/node": "12.0.2",
     "@types/react": "16.8.18",
     "@types/react-dom": "16.8.4",
+    "@types/react-intl": "^2.3.17",
+    "@types/react-router-dom": "^4.3.3",
     "antd": "^3.19.1",
+    "axios": "^0.19.0",
     "cssmodulejoin": "^1.0.3",
     "html-inputtypes": "^1.0.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-intl": "^2.9.0",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "typescript": "3.4.5"
   },
