--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react": "16.8.18",
     "@types/react-dom": "16.8.4",
     "@types/react-intl": "^2.3.17",
+    "@types/react-redux": "^7.0.9",
     "@types/react-router-dom": "^4.3.3",
     "antd": "^3.19.1",
     "axios": "^0.19.0",
@@ -17,8 +18,11 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-intl": "^2.9.0",
+    "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.2",
     "typescript": "3.4.5"
   },
   "scripts": {
